meja/tests/block_no_semi.stderr
File "tests/block_no_semi.meja", line 2, characters 4-5:
Error: Missing semicolon.
