meja/tests/block_no_semi.meja
let x = fun (f) => {
  f x
};
